# ALICE-Synth

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
bindings/ue5/: AliceSynth.h
bindings/unity/: AliceSynth.cs
src/: effects.rs  envelope.rs  ffi.rs  lib.rs  midi.rs  oscillator.rs  patch.rs  python.rs  score.rs  synth.rs
